<resources>
    <string name="app_name">Eco Ray Solutions</string>
    <string name="register">Register</string>
    <string name="register_text">Already You have account?</string>
    <string name="LogIn">Login Here</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="welcome">Welcome To \n Eco Ray Solutions </string>
    <string name="default_web_client_id">603716595785-qu3cbg9d1jcnajkavdh0qei6ahod2667.apps.googleusercontent.com</string>
    <string name="about_text">Eco Ray Solution is your comprehensive guide to understanding and implementing sustainable technologies. We\'re dedicated to empowering users with accessible information and practical tools related to eco Ray solutions, fostering a community committed to a healthier planet. By simplifying complex concepts and offering actionable insights, Eco Ray Solution strives to make environmentally conscious choices an integral part of everydaylife, driving positive impact for generations to come</string>
    <string name="contact_info">Contact Us:\nEmail: info@ecoraysystems.com\nPhone: +92 3184159975</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="login">LogIn</string>
    <string name="welcome_to">Welcome To</string>
    <string name="registration">Registration</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="solarimage">solarImage</string>
    <string name="high_efficiency_solar_panal">High-Efficiency Solar panal</string>
    <string name="price_300">price : $300</string>
    <string name="capacity_300kwh">Capacity : 300Kwh</string>
    <string name="view_detail">View Detail</string>
    <string name="instalpro">InstalPro</string>
    <string name="service_type">Service Type</string>
    <string name="panel_cleaning">Panel Cleaning</string>
    <string name="battery_replacement">Battery Replacement</string>
    <string name="complete_solar_system_setup">Complete Solar system setUp</string>
    <string name="installation_packages">Installation packages</string>
    <string name="select_location">Select Location</string>
    <string name="google_map">Google_Map</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="phone_no">Phone no</string>
    <string name="select_date">Select Date</string>
    <string name="calender">calender</string>
    <string name="submit">Submit</string>
    <string name="custom_solar_system_estimator">Custom Solar System \nEstimator</string>
    <string name="enter_your_energy_requirements_and_location_to_recive_a_detailed_cost_estimate_for_your_solar_system_setup">Enter your energy requirements and \nlocation to receive a detailed cost estimate \nfor your solar system setup.</string>
    <string name="energy_requirments_kwh">Energy Requirements(kWh):</string>
    <string name="maintance_request">Maintance Request</string>
    <string name="issue_reporting">Issue Reporting</string>
    <string name="submit_report">submit Report</string>
    <string name="remainder_nupdates">Remainder\n<b>Updates</b></string>
    <string name="direct_npermotion">Direct\n<b>Permeation</b>n</string>
    <string name="orders_ntechnicion">orders\n <b>technician</b></string>
    <string name="accesories_ncustomer">accessories\n <b>Customer</b>Customer</string>
</resources>