<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".OfferFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imagesolar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginVertical="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:contentDescription="@null"
            android:src="@drawable/solarimage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/TextDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instalpro"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/imagesolar"
            app:layout_constraintStart_toEndOf="@id/imagesolar"
            app:layout_constraintTop_toTopOf="@id/imagesolar" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/con1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/con2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/scrollview">

            <TextView
                android:id="@+id/service_type"
                style="@style/TextDescriptionSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:text="@string/service_type"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/con2" />

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/service_type">

                <RadioButton
                    style="@style/TextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_margin="0dp"
                    android:paddingBottom="0dp"
                    android:text="@string/complete_solar_system_setup"
                    android:textColor="@color/black" />

                <RadioButton
                    style="@style/TextDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_margin="0dp"
                    android:text="@string/battery_replacement"
                    android:textColor="@color/black" />

                <RadioButton
                    style="@style/TextDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_margin="0dp"
                    android:text="@string/panel_cleaning"
                    android:textColor="@color/black" />
            </RadioGroup>

            <TextView
                android:id="@+id/installation_packages"
                style="@style/TextDescriptionSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/installation_packages"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radiogroup" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:padding="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/installation_packages" />

            <TextView
                android:id="@+id/select_location"
                style="@style/TextDescriptionSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/select_location"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/spinner"
                app:layout_constraintTop_toBottomOf="@id/spinner" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:contentDescription="@string/google_map"
                app:layout_constraintTop_toBottomOf="@id/select_location" />

            <TextView
                android:id="@+id/select_date"
                style="@style/TextDescriptionSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/select_date"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@id/imageView"
                app:layout_constraintStart_toStartOf="@id/imageView"
                app:layout_constraintTop_toBottomOf="@id/imageView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateofbirthbox"
                style="@style/TextDescription"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:layout_marginHorizontal="12dp"
                android:hint="@string/dd_mm_yyyy"
                app:hintTextColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/select_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateofbirthtext"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="datetime"
                    android:padding="0dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/calenderImage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="@dimen/_12sdp"
                android:contentDescription="@string/calender"
                android:src="@drawable/calender"
                app:layout_constraintEnd_toEndOf="@id/select_date"
                app:layout_constraintTop_toBottomOf="@id/select_date" />

            <com.google.android.material.button.MaterialButton
                style="@style/TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/submit"
                app:cornerRadius="@dimen/_6sdp"
                app:layout_constraintEnd_toEndOf="@id/calenderImage"
                app:layout_constraintStart_toStartOf="@id/dateofbirthbox"
                app:layout_constraintTop_toBottomOf="@+id/dateofbirthbox" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>