<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="280dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="260dp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:backgroundTint="@color/white"
        app:cardElevation="@dimen/_6sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardimage"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="100dp"
                android:layout_marginVertical="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_12sdp"
                app:cardElevation="@dimen/_6sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/solarimage"
                    android:scaleType="fitXY"
                    android:id="@+id/imagePanel"
                    android:src="@drawable/solarimage" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/textpanal"
                style="@style/TextDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_6sdp"
                android:text="@string/high_efficiency_solar_panal"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardimage" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextDescription"
                android:layout_marginStart="@dimen/_6sdp"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/capacity_300kwh"
                app:layout_constraintTop_toBottomOf="@id/textpanal"
                android:id="@+id/capacity"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextDescription"
                android:layout_marginStart="@dimen/_6sdp"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/price_300"
                app:layout_constraintTop_toBottomOf="@id/capacity"
                android:id="@+id/price"/>
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="@dimen/_6sdp"
                app:cornerRadius="@dimen/_6sdp"
                android:text="@string/view_detail"
                style="@style/TextButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/price"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>